<resources>
    <string name="app_name">Щоденник Пасічника</string>
    <string name="voice_input_description">Голосовий ввід</string>
    <string name="queen_button_text">Матка</string>
    <string name="queen_title">Матка %s</string>
    <string name="hive_button_text">Вулик</string>
    <string name="hive_info_title">Вулик %s</string>
    <string name="hive_name_format">Вулик %s</string>
    <string name="hive_name">Вулик_Імя</string>
    <string name="notes_button_text">Приміт</string>
    <string name="hive_notes_title">Примітки %s</string>
    <string name="beekeeping_profitability">Рентабельність пасіки</string>
    <string name="vosk_model_loading">Модель Vosk ще не завантажена. Зачекайте.</string>
    <string name="vosk_listening">Слухаю…</string>
    <string name="vosk_start_error">Помилка запуску розпізнавання: %1$s</string>
    <string name="audio_permission_denied">Дозвіл на запис аудіо відхилено. Голосовий ввід недоступний.</string>
    <string name="vosk_error">Помилка голосового вводу: %1$s</string>
    <string name="vosk_timeout">Голосовий ввід вимкнено через бездіяльність.</string>
    <string name="search_not_found">Введіть пошуковий запит</string>
    <string name="search_no_results">За Вашим запитом результати пошуку відсутні</string>
    <string name="vosk_model_not_loaded">Модель Vosk ще не завантажена. Зачекайте або перезапустіть додаток.</string>
    <string name="voice_input_stopped">Голосовий ввід зупинено.</string>
    <string name="voice_input">Голосовий ввід.</string>
    <string name="voice_input_listening">Слухаю…</string>
    <string name="voice_input_timeout">Тайм-аут голосового вводу. Запис зупинено.</string>
    <string name="error_recognition_start">Помилка запуску розпізнавання: %1$s</string>
    <string name="error_voice_input">Помилка голосового вводу: %1$s</string>
    <string name="vosk_model_loaded">Vosk модель завантажена</string>
    <string name="voice_input_system">Система голосового вводу</string>
    <string name="engine_google_name">Голосова модель Google</string>
    <string name="vosk_fallback_to_google">VOSK вибрано, але не готово</string>
    <string name="engine_vosk_name">Голосова модель Vosk</string>
    <string name="permission_denied">Дозвіл на використання мікрофона відхилено. Голосовий ввід недоступний.</string>
    <string name="vosk_model_not_ready">Модель розпізнавання Vosk ще не готова. Будь ласка, зачекайте кілька секунд і спробуйте знову.</string>
    <string name="vosk_not_ready_fallback">Vosk ще не готовий. Використовується %s.</string>
    <string name="vosk_error_fallback">Сталася помилка Vosk. Спроба використовувати %s.</string>
    <string name="google_voice_engine">Google Voice</string>
    <string name="general_notes_button_text">Загальні записи</string>
    <string name="new_record_button_text">Новий запис</string>
    <string name="hive_added_success">Додано Вулик!</string>
    <string name="hive_count">Вулики: %d</string>
    <string name="hive_name_default">Вулик №1</string>
    <string name="options_description">Опції</string>
    <string name="open_drawer">Відкрити бічну панель</string>
    <string name="search_notes">Пошук записів</string>
    <string name="menu_home">Головна</string>
    <string name="menu_search">Пошук</string>
    <string name="menu_add_hive">Додати вулик</string>
    <string name="menu_synchronization">Синхронізація</string>
    <string name="menu_settings">Налаштування</string>
    <string name="go_to_settings">До налаштувань</string>
    <string name="settings_parameter">Параметр налаштування</string>
    <string name="menu_exit">Вихід</string>
    <string name="title_settings">Налаштування</string>
    <string name="setting_title_data_export">Експорт та резервна копія</string>
    <string name="delete_hive_title">Видалити вулик</string>
    <string name="delete_hive_message">Ви впевнені, що хочете видалити %s? Цю дію неможливо скасувати.</string>
    <string name="new_hive_number_hint">Введіть новий номер</string>
    <string name="hive_number_hint">Введіть номер</string>
    <string name="enter_search_query">Введіть пошуковий запит</string>
    <string name="button_save">Зберегти</string>
    <string name="delete">Видалити</string>
    <string name="edit">Редагувати</string>
    <string name="cancel">Скасувати</string>
    <string name="note_text">Текст нотатки…</string>
    <string name="add_hive_title">Додати новий вулик</string>
    <string name="menu_profitability">Рентабельність</string>
    <string name="add_expense_title">Кнопка для додавання нової витрати</string>
    <string name="add_income_title">Кнопка для додавання нового прибутку</string>
    <string name="income_description_hint">Опис (наприклад, \"Продаж меду\")</string>
    <string name="income_amount_hint">Кількість (наприклад, 20)</string>
    <string name="income_unit_hint">Одиниця виміру (наприклад, \"кг\")</string>
    <string name="income_price_per_unit_hint">Ціна за одиницю (наприклад, 250)</string>
    <string name="date_hint">Дата (наприклад, 25.10.2025)</string>
    <string name="date">25.10.2025</string>
    <string name="information">Вулик №1 (Інформація)</string>
    <string name="expense_description_hint">Опис (наприклад, \"Цукор для підгодівлі\")</string>
    <string name="expense_total_price_hint">Загальна сума витрат (наприклад, 500)</string>
    <string name="expense_quantity_hint">Кількість</string>
    <string name="expense_units_hint">Одиниці виміру</string>
    <string name="total_income_text">Загальний прибуток: %1$s</string>
    <string name="total_expenses_text">Загальні витрати: %s</string>
    <string name="general_notes_title">Загальні записи</string>
    <string name="edit_hive_number_title">Змінити номер вулика</string>
    <string name="confirm_delete">Видалити запис?</string>
    <string name="delete_confirm_message">Ви впевнені, що хочете видалити цю нотатку? Цю дію неможливо буде скасувати.</string>
    <string name="note_deleted">Запис видалено</string>
    <string name="choose_an_action">Оберіть дію.</string>
    <string name="create_backup">Створити резервну копію?</string>
    <string name="restore_backup">Відновити з резервної копії?</string>
    <string name="hive_number_updated">Номер вулика оновлено!</string>
    <string name="primary_color_updated">Основний колір оновлено!</string>
    <string name="secondary_color_updated">Додатковий колір оновлено!</string>
    <string name="hive_deleted">Вулик видалено.</string>
    <string name="max_hives_reached">Досягнуто максимальну кількість вуликів</string>
    <string name="hive_number_exists">Вулик з таким номером вже існує.</string>
    <string name="hive_number_required">Номер вулика є обов`язковим</string>
    <string name="general_record_title">Загальний запис</string>
    <string name="hive_record_title">Запис для вулика №%s</string>
    <string name="queen_record_title">Запис для матки вулика №%s</string>
    <string name="notes_record_title">Запис для приміток вулика №%s</string>
    <string name="edit_record_title">Редагувати запис</string>
    <string name="note_cannot_be_empty">Запис не може бути порожнім</string>
    <string name="listening_message">Слухаю…</string>
    <string name="recognition_error">Помилка: %s</string>
    <string name="error_audio">Помилка аудіо</string>
    <string name="error_client">Помилка клієнта</string>
    <string name="error_permissions">Недостатньо прав</string>
    <string name="error_network">Помилка мережі</string>
    <string name="error_network_timeout">Час очікування мережі вичерпано</string>
    <string name="error_no_match">Не розпізнано</string>
    <string name="error_recognizer_busy">Розпізнавач зайнятий</string>
    <string name="error_server">Помилка сервера</string>
    <string name="error_speech_timeout">Час очікування мовлення вичерпано</string>
    <string name="error_unknown">Невідома помилка</string>
    <string name="hive_number_not_found">Номер вулика не знайдено</string>
    <string name="tab_title_expenses">Витрати</string>
    <string name="tab_title_income">Прибутки</string>
    <string name="error_invalid_tab_position">Недійсна позиція</string>
    <string name="annual_profitability_format">За %1$s рік: %2$s</string>
    <string name="error_note_not_found">Помилка записів не знайдено</string>
    <string name="dialog_choose_action">Оберіть дію</string>
    <string name="option_go_to_hive">Перейти у вулик</string>
    <string name="option_edit_record">Редагувати запис</string>
    <string name="dialog_title_edit_hive_number">Редагувати номер вулика</string>
    <string name="general_records_type_name">Загальні записи</string>
    <string name="hive_display_number">Вулик №%s</string>
    <string name="error_hive_not_found_placeholder">Вулик (Не знайдено)</string>
    <string name="error_hive_loading">Помилка завантаження даних вулика.</string>
    <string name="settings_saved_message">Налаштування збережено</string>
    <string name="no_notes_yet">Нотаток поки що немає.\nНатисніть /Новий запис/, щоб додати першу!</string>
    <string name="edit_your_entry">Редагуйте ваш запис тут…</string>
    <string name="expense_format_with_currency">-%1$.1f </string>
    <string name="quantity_format">%.2f</string>
    <string name="income_amount_format">+%.1f </string>
    <string name="income_quantity_details_format">%1$.2f %2$s по %3$.2f грн/%4$s</string>
    <string name="hive_notes_format">Вулик %1$s | Тип: %2$s</string>
    <string name="error_fill_all_fields">Будь ласка, заповніть усі обов\'язкові поля та вкажіть коректні значення.</string>
    <string name="hive_number_validation_error">Номер вулика не може бути порожнім або незмінним</string>
    <string name="select_color">Вибрати колір</string>
    <string name="hive_options">Опції для вулика</string>
    <string name="edit_number">Редагувати номер</string>
    <string name="select_base_color">Вибрати основний колір</string>
    <string name="select_additional_color">Вибрати додатковий колір</string>
    <string name="delete_hive">Видалити вулик</string>
    <string name="hive_number">Номер вулика</string>
    <string name="error_entry_not_found">Помилка: Запис не знайдено для обраної дії.</string>
    <string name="expense_deleted">Витрату успішно видалено.</string>
    <string name="income_deleted">Прибуток успішно видалено.</string>
    <string name="pref_header_general">Загальні</string>
    <string name="pref_header_data_tools">Дані та інструменти</string>
    <string name="pref_header_about">Про програму</string>
    <string name="pref_title_sync_data">Синхронізувати дані</string>
    <string name="pref_summary_sync_data">Автоматично синхронізувати дані з хмарним сховищем</string>
    <string name="pref_title_display_unit">Одиниця виміру</string>
    <string name="pref_title_backup">Створити резервну копію</string>
    <string name="pref_summary_backup">Експортувати базу даних у файл</string>
    <string name="pref_title_apiary_locations">Редагувати місця пасік</string>
    <string name="pref_title_version">Версія програми</string>
    <string name="warning_set_backup_directory">Каталог для автоматичного резервного копіювання не встановлено. Дані не захищені!</string>
    <string name="action_settings">Налаштувати</string>
    <string name="setting_title_backup_folder">Каталог для автобекапу</string>
    <string name="backup_directory_selection_cancelled">Вибір каталогу скасовано.</string>
    <string name="backup_directory_set_success">Каталог для бекапу успішно встановлено!</string>
    <string name="setting_title_voice_input">Голосове введення</string>
    <string name="setting_title_sync_options">Синхронізація</string>
    <string name="dialog_vosk_download_title">Завантаження моделі Vosk</string>
    <string name="dialog_vosk_progress_description">Будь ласка, зачекайте. Це може зайняти кілька хвилин, залежно від швидкості вашого інтернету. Не закривайте додаток.</string>
    <string name="dialog_progress_value">%1$d%%</string>
</resources>