<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_add_hive"
            android:icon="@drawable/ic_add_box"
            android:title="@string/menu_add_hive"/>
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/menu_synchronization" />
        <item
            android:id="@+id/nav_profitability"
            android:icon="@drawable/ic_money_off_24dp"
            android:title="@string/menu_profitability" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_exit_button"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>