
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/note_item_background"
        android:padding="16dp">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:textColor="@color/color_primary_darker"
            android:text="@string/date"
            />

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/note_text"
            />
        <TextView
            android:id="@+id/noteTypeAndHive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color_primary_darker"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/information"/>
    </LinearLayout>
