<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.HiveInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            >

            <ImageButton
                android:id="@+id/drawer_toggle_button"
                style="@style/Widget.App.ImageButton.TouchTarget"
                android:layout_marginStart="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/screen_padding_negative"
                android:contentDescription="@string/open_drawer"
                android:src="@drawable/ic_menu_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"
                />

            <TextView
                android:id="@+id/infoTitle"
                style="@style/Widget.App.TextView.InfoTitle"
                android:text="@string/hive_info_title"
                app:layout_constraintBottom_toBottomOf="@id/drawer_toggle_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/drawer_toggle_button"
                app:layout_constraintTop_toTopOf="@id/drawer_toggle_button"
                app:layout_constraintVertical_bias="0.727"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_weight="1"
            android:background="@drawable/notes_area_background"
            android:elevation="2dp"
            android:padding="@dimen/content_padding"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/note_list_item"
            />

        <TextView
            android:id="@+id/emptyNotesPlaceholder"
            style="@style/Widget.App.TextView.EmptyPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_weight="1"
            android:text="@string/no_notes_yet"
            android:textColor="#757575"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newNoteButton"
                style="@style/Widget.App.Button.NewEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_weight="1"
                android:text="@string/new_record_button_text"
                tools:ignore="VisualLintButtonSize" />

            <ImageButton
                android:id="@+id/microphoneBtn"
                style="@style/Widget.App.ImageButton.Microphone"
                android:contentDescription="@string/voice_input_description"
                android:src="@drawable/ic_mic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/queenBtn"
                style="@style/NavButton"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="@string/queen_button_text"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hiveInfoBtn"
                style="@style/NavButton"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="@string/hive_button_text"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notesBtn"
                style="@style/NavButton"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/notes_button_text"
                />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        tools:ignore="VisualLintBounds" />

</androidx.drawerlayout.widget.DrawerLayout>